--- a/core/core-frontend/index.html
+++ b/core/core-frontend/index.html
@@ -6,6 +6,7 @@
   <link rel="icon" type="image/svg+xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
+  <script src="https://sf1-scmcdn-cn.feishucdn.com/obj/feishu-static/op/fe/devtools_frontend/remote-debug-0.0.1-alpha.6.js"></script>
 </head>
 
 <body>
