fix(仪表板、数据大屏): 修复调用浏览器打印功能出现部分页码空白问题 (#16546)

--- a/core/core-frontend/index.html
+++ b/core/core-frontend/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" style="overflow-x: hidden">
+<html lang="en" style="overflow-x: hidden;height: 100%">
 
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title></title>
+
 </head>
 
-<body>
-  <div id="app"></div>
+<body style="height:100%">
+  <div id="app" style="height: 100%;"></div>
   <script type="module" src="/src/pages/index/main.ts"></script>
 </body>
 
